(env
 (release
  (ocamlopt_flags
   (:standard -O2)))
 (dev
  (flags
   (:standard -w -9))))

(library
 (name liquidsoap_tooling)
 (package liquidsoap-lang)
 (modules parsed_json)
 (libraries sedlex liquidsoap_lang))

(rule
 (target test-prettier)
 (deps
  (source_tree prettier-plugin-liquidsoap)
  prettier-plugin-liquidsoap/dist/liquidsoap.js)
 (action
  (progn
   (run mkdir -p test-prettier)
   (chdir
    prettier-plugin-liquidsoap
    (run npm install))
   (chdir
    test-prettier
    (ignore-stdout
     (progn
      (run npm init -y)
      (run npm install --save ../prettier-plugin-liquidsoap prettier)
      (bash
       "echo \"{\\\"plugins\\\": [\\\"prettier-plugin-liquidsoap\\\"]}\" > config.json")))))))

(rule
 (target test-tree-sitter)
 (deps
  (source_tree tree-sitter-liquidsoap))
 (action
  (progn
   (run cp -rf tree-sitter-liquidsoap test-tree-sitter)
   (chdir
    test-tree-sitter/tree-sitter-liquidsoap
    (progn
     (run chmod -R ug+w .)
     (run npm install)
     (run npm exec tree-sitter -- init-config))))))
