(env
 (release
  (ocamlopt_flags
   (:standard -O2)))
 (dev
  (flags
   (:standard -w -9))))

(library
 (name liquidsoap_tooling)
 (package liquidsoap-lang)
 (modules parsed_json)
 (libraries sedlex liquidsoap_lang))

(rule
 (target test-prettier)
 (deps
  (source_tree prettier-plugin-liquidsoap)
  prettier-plugin-liquidsoap/dist/liquidsoap.js)
 (action
  (progn
   (run mkdir -p test-prettier)
   (chdir
    prettier-plugin-liquidsoap
    (run npm install))
   (chdir
    test-prettier
    (ignore-stdout
     (progn
      (run npm init -y)
      (run npm install --save ../prettier-plugin-liquidsoap prettier)
      (bash
       "echo \"{\\\"plugins\\\": [\\\"prettier-plugin-liquidsoap\\\"]}\" > config.json")))))))

(rule
 (target tree-sitter-liquidsoap)
 (action
  (progn
   (run git clone https://github.com/savonet/tree-sitter-liquidsoap.git)
   (chdir
    tree-sitter-liquidsoap
    (run npm install)))))
