; Regenerate using dune build @gendune --auto-promote

(include dune.inc)

(rule
 (alias gendune)
 (deps
  (source_tree .))
 (target dune.inc.gen)
 (action
  (progn
   (with-stdout-to
    dune.inc.gen
    (run ../gen_dune.exe))
   (format-dune-file dune.inc.gen dune.inc.gen.formatted))))

(rule
 (alias gendune)
 (action
  (diff dune.inc dune.inc.gen.formatted)))
