(rule
 (alias runtest)
 (package liquidsoap)
 (deps
  (:liquidsoap ../../src/bin/liquidsoap.exe)
  (:main_lib ../../libs/main.liq)
  (:run_test ../run_test.sh)
  (source_tree ../../libs)
  (source_tree .))
 (action
  (progn
   (run %{run_test} %{liquidsoap} %{main_lib} argsof.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} doc.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} error.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} eval.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} file.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} file_protocol.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} getter.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} interactive.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} json.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} list.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} loop.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} math.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} null.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} predicate.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} process.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} rec.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} record.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} ref.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} stdlib.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} string.liq)
   (run %{run_test} %{liquidsoap} %{main_lib} typing.liq))))
