; Regenerate using dune build @gendune --auto-promote

(include dune.inc)

(executable
 (name gen_dune)
 (libraries liquidsoap_build_tools)
 (modules gen_dune))

(rule
 (alias gendune)
 (deps
  (source_tree .))
 (target dune.inc.gen)
 (action
  (progn
   (with-stdout-to
    dune.inc.gen
    (run ./gen_dune.exe))
   (format-dune-file dune.inc.gen dune.inc.gen.formatted))))

(rule
 (alias gendune)
 (action
  (diff dune.inc dune.inc.gen.formatted)))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target first-concat.mp4)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "testsrc=duration=20:size=1280x720:rate=30"
   -vf
   "setpts=N+1235"
   %{target})))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target second-concat.mp4)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "testsrc=duration=30:size=1280x720:rate=30"
   -vf
   "setpts=N+756"
   %{target})))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target third-concat.mp4)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "testsrc=duration=10:size=1280x720:rate=30"
   -vf
   "setpts=N+245"
   %{target})))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target background.jpg)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   testsrc=size=1280x720
   -t
   1
   -f
   mjpeg
   %{target})))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target logo.png)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   testsrc=size=50x50
   -t
   1
   -f
   mjpeg
   %{target})))

(rule
 (alias ffmpeg_copy_concat)
 (package liquidsoap)
 (deps
  first-concat.mp4
  second-concat.mp4
  third-concat.mp4
  ffmpeg_copy_concat.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg copy+concat"
   liquidsoap
   %{test_liq}
   ffmpeg_copy_concat.liq)))

(rule
 (alias ffmpeg_raw_implicit_conversion)
 (package liquidsoap)
 (deps
  all_media_files
  ffmpeg_raw_implicit_conversion.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg raw implicit conversion"
   liquidsoap
   %{test_liq}
   ffmpeg_raw_implicit_conversion.liq)))

(rule
 (alias ffmpeg_complex_filter)
 (package liquidsoap)
 (deps
  all_media_files
  ffmpeg_complex_filter.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg complex filter"
   liquidsoap
   %{test_liq}
   ffmpeg_complex_filter.liq)))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target long-video.mp4)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "testsrc=d=30:s=1920x1080:r=24,format=yuv420p"
   -f
   lavfi
   -i
   "sine=f=440:b=4"
   -shortest
   %{target})))

(rule
 (alias mediatest)
 (package liquidsoap)
 (deps test-subtitle.srt)
 (target video-with-subtitle.mkv)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "testsrc=d=30:s=1280x720:r=24,format=yuv420p"
   -f
   lavfi
   -i
   "sine=f=440:b=4"
   -i
   test-subtitle.srt
   -c:v
   mpeg4
   -c:a
   aac
   -c:s
   srt
   -shortest
   %{target})))

(rule
 (alias ffmpeg_copy_subtitle)
 (package liquidsoap)
 (deps
  video-with-subtitle.mkv
  ffmpeg_copy_subtitle.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg copy subtitle"
   liquidsoap
   %{test_liq}
   ffmpeg_copy_subtitle.liq
   --
   video-with-subtitle.mkv)))

(rule
 (alias ffmpeg_distributed_hls)
 (package liquidsoap)
 (deps
  long-video.mp4
  ffmpeg_distributed_hls.liq
  ffmpeg_distributed_hls_state.json
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg distributed HLS encoding"
   liquidsoap
   %{test_liq}
   ffmpeg_distributed_hls.liq
   --
   long-video.mp4)))

(rule
 (alias ffmpeg_hls_mp4)
 (package liquidsoap)
 (deps
  long-video.mp4
  ffmpeg_hls_mp4.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg HLS MP4 encoding"
   liquidsoap
   %{test_liq}
   ffmpeg_hls_mp4.liq
   --
   long-video.mp4)))

(rule
 (alias ffmpeg_hls_copy_mp4)
 (package liquidsoap)
 (deps
  long-video.mp4
  ffmpeg_hls_copy_mp4.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg HLS MP4 encoding"
   liquidsoap
   %{test_liq}
   ffmpeg_hls_copy_mp4.liq
   --
   long-video.mp4)))

(rule
 (alias mediatest)
 (package liquidsoap)
 (deps
  long-video.mp4
  ffmpeg_distributed_hls.liq
  ffmpeg_distributed_hls_state.json
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg distributed HLS encoding"
   liquidsoap
   %{test_liq}
   ffmpeg_distributed_hls.liq
   --
   long-video.mp4)))

(rule
 (alias ffmpeg_transparency_filter)
 (package liquidsoap)
 (deps
  all_media_files
  background.jpg
  logo.png
  ffmpeg_transparency_filter.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg transparency filter"
   liquidsoap
   %{test_liq}
   ffmpeg_transparency_filter.liq)))

(rule
 (alias ffmpeg_filter_changing_rate)
 (package liquidsoap)
 (deps
  all_media_files
  background.jpg
  logo.png
  ffmpeg_filter_changing_rate.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg filter with changing video rate"
   liquidsoap
   %{test_liq}
   ./ffmpeg_filter_changing_rate.liq
   --
   ./@ffmpeg[format='mp4',@audio[codec='aac',channels=2],@video[codec='libx264']].mp4
   ./@ffmpeg[format='mp4',@audio[codec='aac',channels=2],@video[codec='libx264',r=12]].mp4)))

(rule
 (alias lufs_integrated)
 (package liquidsoap)
 (deps
  all_media_files
  lufs_integrated.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "Integrated LUFS computation"
   liquidsoap
   %{test_liq}
   lufs_integrated.liq)))

(rule
 (alias mediatest)
 (package liquidsoap)
 (target test-audio.wav)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -f
   lavfi
   -i
   "sine=frequency=440:duration=5"
   %{target})))

(rule
 (alias ffmpeg_filter_array_args)
 (package liquidsoap)
 (deps
  test-audio.wav
  ffmpeg_filter_array_args.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "FFmpeg filter with array arguments"
   liquidsoap
   %{test_liq}
   ffmpeg_filter_array_args.liq
   --
   test-audio.wav)))

(rule
 (alias mediatest)
 (package liquidsoap)
 (deps long-video.mp4)
 (target test-image.png)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -i
   long-video.mp4
   -frames:v
   1
   %{target})))

(rule
 (alias image_decoder_duration)
 (package liquidsoap)
 (deps
  test-image.png
  image_decoder_duration.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "Image decoder with fixed duration"
   liquidsoap
   %{test_liq}
   image_decoder_duration.liq)))

; Fetch DVD bitmap subtitle test file from FFmpeg FATE samples

(rule
 (alias bitmap_subtitle_to_video)
 (target fate-suite-filter-242_4.mkv)
 (action
  (run
   rsync
   -avL
   rsync://fate-suite.ffmpeg.org/fate-suite/filter/242_4.mkv
   %{target})))

(rule
 (alias bitmap_subtitle_to_video)
 (package liquidsoap)
 (target bitmap_subtitle_to_video_output.mp4)
 (deps
  fate-suite-filter-242_4.mkv
  bitmap_subtitle_to_video.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "Bitmap subtitle to video conversion"
   liquidsoap
   %{test_liq}
   bitmap_subtitle_to_video.liq
   --
   fate-suite-filter-242_4.mkv)))

; Extract a frame at 4.00s from the encoded output for visual comparison

(rule
 (alias bitmap_subtitle_to_video)
 (deps bitmap_subtitle_to_video_output.mp4)
 (target bitmap_subtitle_to_video_output.gen.jpg)
 (action
  (run
   ffmpeg
   -hide_banner
   -loglevel
   error
   -ss
   4.00
   -i
   bitmap_subtitle_to_video_output.mp4
   -frames:v
   1
   -q:v
   2
   -bitexact
   %{target})))

; Compare generated image with reference, promote if changed

(rule
 (alias bitmap_subtitle_to_video)
 (action
  (diff
   bitmap_subtitle_to_video_output.jpg
   bitmap_subtitle_to_video_output.gen.jpg)))

; Test custom text_to_ass function for subtitle encoding

(rule
 (alias subtitle_text_to_ass)
 (package liquidsoap)
 (deps
  test-subtitle.srt
  subtitle_text_to_ass.liq
  ../../src/bin/liquidsoap.exe
  (package liquidsoap)
  (source_tree ../../src/lib)
  (:test_liq ../test.liq)
  (:run_test ../run_test.exe))
 (action
  (run
   %{run_test}
   "Custom text_to_ass function"
   liquidsoap
   %{test_liq}
   subtitle_text_to_ass.liq)))

(alias
 (name mediatest)
 (deps
  (alias ffmpeg_distributed_hls)
  (alias ffmpeg_raw_implicit_conversion)
  (alias ffmpeg_complex_filter)
  (alias ffmpeg_copy_concat)
  (alias ffmpeg_copy_subtitle)
  (alias ffmpeg_hls_mp4)
  (alias ffmpeg_transparency_filter)
  (alias ffmpeg_filter_changing_rate)
  (alias ffmpeg_filter_array_args)
  (alias lufs_integrated)
  (alias image_decoder_duration)
  (alias bitmap_subtitle_to_video)
  (alias subtitle_text_to_ass)))
