(executable
 (name gen_bigrecord)
 (preprocess
  (pps ppx_string))
 (libraries mem_usage liquidsoap_core liquidsoap_lang)
 (modules gen_bigrecord))

(rule
 (alias perftest)
 (target big-record.liq)
 (deps
  (:gen_bigrecord ./gen_bigrecord.exe))
 (action
  (run %{gen_bigrecord} %{target})))

(rule
 (alias perftest)
 (deps
  (:liquidsoap ../../src/bin/liquidsoap.exe)
  (:small_record ./small-record.liq)
  (:big_record ./big-record.liq)
  (:erathostenes ./erathostenes.liq)
  (:performance performance.liq)
  (:memory memory.liq)
  (:test_liq ../test.liq))
 (action
  (progn
   (run %{liquidsoap} %{test_liq} %{performance} %{small_record})
   (run %{liquidsoap} %{test_liq} %{performance} %{big_record})
   (run %{liquidsoap} %{test_liq} %{performance} %{erathostenes})
   (run %{liquidsoap} %{test_liq} %{performance} %{memory}))))
